compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__bit_array5.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "const bit_size = 8\npub fn main() {\n  let a = <<10:size(bit_size)>>\n  a\n}\n"
---
----- SOURCE CODE
const bit_size = 8
pub fn main() {
  let a = <<10:size(bit_size)>>
  a
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> bitstring().
main() ->
    A = <<10:(erlang:max(0, 8))>>,
    A.
