compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__bit_array_literal_string_constant_is_treated_as_utf8.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "\nconst a = <<\"hello\", \" \", \"world\">>\npub fn main() { a }\n"
---
----- SOURCE CODE

const a = <<"hello", " ", "world">>
pub fn main() { a }


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> bitstring().
main() ->
    <<"hello"/utf8, " "/utf8, "world"/utf8>>.
