compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__bit_array_segment_inside_block_with_size.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "\npub fn main() {\n  let a = 1\n  let b = 2\n  <<{ a + b }, { a + b }:size(16)>>\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let a = 1
  let b = 2
  <<{ a + b }, { a + b }:size(16)>>
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> bitstring().
main() ->
    A = 1,
    B = 2,
    <<(A + B), (A + B):16>>.
